--- a/nextflow.config
+++ b/nextflow.config
@@ -8,15 +8,15 @@ params {
     // Containers
     bcftools      = 'bcftools.1.19'
     samtools      = 'samtools.1.9'
-    bioconductor  = 'bioconductor.3.19'
-    rocker        = 'rocker'
+    bioconductor  = 'mahshaaban/bioconductor:3.19'
+    rocker        = 'rocker/tidyverse:latest'
     rvs           = 'rvs.1.24.0'
 
     // Default params
     // vcf           = "*.variants.vcf.gz{,.tbi}"
     // cases         = "*.cases.txt"
     genome        = 'hg38'
-    style         = 'NCBI'
+    style         = 'UCSC'
     GQ            = 30
     DP            = 10
     VAF           = 0.4
@@ -37,10 +37,10 @@ profiles {
   // Test profile (Same as default params)
   test {
     params {
-      vcf           = "$SCRATCH/toy-datasets/vcf-sarek/pheno.variants.vcf.gz{,.tbi}"
-      cases         = "$SCRATCH/toy-datasets/vcf-sarek/pheno.cases.txt"
+      vcf           = "$TOY_DATASETS/wes-sarek/*.variants.vcf.gz{,.tbi}"
+      cases         = "$TOY_DATASETS/wes-sarek/*.cases.txt"
       genome        = 'hg38'
-      style         = 'NCBI'
+      style         = 'UCSC'
       GQ            = 30
       DP            = 10
       VAF           = 0.4
@@ -50,6 +50,14 @@ profiles {
       gnomADe_AF    = 0.005
       MAX_AF        = 0.005
       DS            = 0.8
+    }
+  }
+
+    // Test on gh-action
+  gha {
+    params {
+      vcf   = "input/*.variants.vcf.gz{,.tbi}"
+      cases = "input/*.cases.txt"
     }
   }
 }
