update parameters, and test data

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,19 +13,21 @@ params {
     rvs           = 'rvs.1.24.0'
 
     // Default params
-    // vcf           = "*.variants.vcf.gz{,.tbi}"
+    // vcf           = "*.variants.annotated.vcf.gz{,.tbi}"
     // cases         = "*.cases.txt"
     genome        = 'hg38'
     style         = 'UCSC'
-    GQ            = 30
-    DP            = 10
-    VAF           = 0.4
-    MAF           = 0.005
+    GQ            = 10
+    DP            = 5
+    VAF           = 0.2
+    MAF           = 0.5
+    PAF           = 0.5
     HWE           = 1e-5
-    ExcHet        = 0.9
-    gnomADe_AF    = 0.005
-    MAX_AF        = 0.005
-    DS            = 0.8
+    ExcHet        = 0.5
+    gnomADe_AF    = 0.5
+    MAX_AF        = 0.5
+    DS            = 0.2
+    CADD          = 5
 }
 
 profiles {
@@ -37,23 +39,12 @@ profiles {
   // Test profile (Same as default params)
   test {
     params {
-      vcf           = "$TOY_DATASETS/wes-sarek/*.variants.vcf.gz{,.tbi}"
+      vcf           = "$TOY_DATASETS/wes-sarek/*.variants.annotated.vcf.gz{,.tbi}"
       cases         = "$TOY_DATASETS/wes-sarek/*.cases.txt"
-      genome        = 'hg38'
-      style         = 'UCSC'
-      GQ            = 30
-      DP            = 10
-      VAF           = 0.4
-      MAF           = 0.005
-      HWE           = 1e-5
-      ExcHet        = 0.9
-      gnomADe_AF    = 0.005
-      MAX_AF        = 0.005
-      DS            = 0.8
     }
   }
 
-    // Test on gh-action
+  // Test on gh-action
   gha {
     params {
       vcf   = "input/*.variants.vcf.gz{,.tbi}"
