add categories parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,7 @@ params {
     MAX_AF        = 0.5
     DS            = 0.2
     CADD          = 5
+    categories    = 'Pathogenic,Damaging,Splicing,High,PTV,Stop'
 }
 
 profiles {
