--- a/nextflow.config
+++ b/nextflow.config
@@ -40,16 +40,7 @@ profiles {
   // Test profile (Same as default params)
   test {
     params {
-      vcf           = "$TOY_DATASETS/wes-sarek/*.variants.annotated.vcf.gz{,.tbi}"
-      cases         = "$TOY_DATASETS/wes-sarek/*.cases.txt"
-    }
-  }
-
-  // Test on gh-action
-  gha {
-    params {
-      vcf   = "input/*.variants.vcf.gz{,.tbi}"
-      cases = "input/*.cases.txt"
+      cohorts = "input/cohorts_input.csv"
     }
   }
 }
