add a coding regions param

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,8 +13,6 @@ params {
     rvs           = 'rvs.1.24.0'
 
     // Default params
-    // vcf           = "*.variants.annotated.vcf.gz{,.tbi}"
-    // cases         = "*.cases.txt"
     genome        = 'hg38'
     style         = 'UCSC'
     GQ            = 10
@@ -29,6 +27,7 @@ params {
     DS            = 0.2
     CADD          = 5
     categories    = 'Pathogenic,Damaging,Splicing,High,PTV,Stop'
+    coding        = 'true'
 }
 
 profiles {
