use plink to extract and aggregate case counts

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,8 @@ params {
     bioconductor  = 'mahshaaban/bioconductor:3.19'
     rocker        = 'rocker/tidyverse:latest'
     rvs           = 'rvs.1.24.0'
-
+    plink         = 'plink.1.9'
+    
     // Default params
     genome        = 'hg38'
     style         = 'UCSC'
