split subset and optional fill

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,6 +29,8 @@ params {
     CADD          = 5
     categories    = 'Pathogenic,Damaging,Splicing,High,PTV,Stop'
     coding        = 'true'
+    fill          = true
+    AF_COL        = 'gnomADe_AF'
 }
 
 profiles {
